feat(backend): create docker environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 services:
+  # postgres service with limited shared mem and configurable password
   database:
     image: postgres:17
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD_FILE: "/run/secrets/db_password"
     shm_size: 128mb
+    secrets:
+      - db_password
+
+  backend:
+    build:
+      context: ./backend
     secrets:
       - db_password
 
