--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.3"
+chrono = { version = "0.4.40", default-features = false, features = ["std", "clock", "serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.44.2", default-features = false, features = ["macros", "rt-multi-thread", "tracing"] }
 tracing = "0.1.41"
