--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,3 +18,6 @@ tokio = { version = "1.44.2", default-features = false, features = [
 ] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+
+[dev-dependencies]
+rstest = "0.25.0"
