--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4.40", default-features = false, features = [
   "clock",
   "serde",
 ] }
+clap = { version = "4.5.36", features = ["derive", "color"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.44.2", default-features = false, features = [
   "macros",
