feat(backend): database configuration, migrations and connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,8 @@ services:
     secrets:
       - db_password
     command:
-      - "--db-address=database:5432"
+      - "--db-host=database"
       - "--db-password=$(cat /run/secrets/db_password)"
-      - "0.0.0.0:8080"
     depends_on:
       - database
 
