--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,13 @@ chrono = { version = "0.4.40", default-features = false, features = [
 ] }
 clap = { version = "4.5.36", features = ["derive", "color"] }
 serde = { version = "1.0.219", features = ["derive"] }
+sqlx = { version = "0.8.5", default-features = false, features = [
+  "derive",
+  "macros",
+  "migrate",
+  "runtime-tokio",
+  "postgres",
+] }
 tokio = { version = "1.44.2", default-features = false, features = [
   "macros",
   "rt-multi-thread",
