--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,7 @@ sqlx = { version = "0.8.5", default-features = false, features = [
   "migrate",
   "runtime-tokio",
   "postgres",
+  "chrono",
 ] }
 tokio = { version = "1.44.2", default-features = false, features = [
   "macros",
