--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.3"
+axum = { version = "0.8.3" }
 chrono = { version = "0.4.40", default-features = false, features = [
   "std",
   "clock",
@@ -19,6 +19,7 @@ sqlx = { version = "0.8.5", default-features = false, features = [
   "runtime-tokio",
   "postgres",
   "chrono",
+  "uuid",
 ] }
 tokio = { version = "1.44.2", default-features = false, features = [
   "macros",
@@ -27,6 +28,7 @@ tokio = { version = "1.44.2", default-features = false, features = [
 ] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+uuid = { version = "1.16.0", features = ["serde"] }
 
 [dev-dependencies]
 rstest = "0.25.0"
