--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -28,7 +28,7 @@ tokio = { version = "1.44.2", default-features = false, features = [
 ] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-uuid = { version = "1.16.0", features = ["serde"] }
+uuid = { version = "1.16.0", features = ["serde", "v4"] }
 
 [dev-dependencies]
 rstest = "0.25.0"
