refactor!(backend): better logging, remove verbose flag in favour of env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
   backend:
     build:
       context: ./backend
+    environment:
+      RUST_LOG: info
     secrets:
       - db_password
     command:
